; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/postmaster/extr_postmaster.c_bgworker_should_start_now.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/postmaster/extr_postmaster.c_bgworker_should_start_now.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pmState = common dso_local global i32 0, align 4
@BgWorkerStart_RecoveryFinished = common dso_local global i32 0, align 4
@BgWorkerStart_ConsistentState = common dso_local global i32 0, align 4
@BgWorkerStart_PostmasterStart = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @bgworker_should_start_now to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bgworker_should_start_now(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* @pmState, align 4
  switch i32 %4, label %24 [
    i32 137, label %5
    i32 129, label %5
    i32 133, label %5
    i32 134, label %5
    i32 131, label %5
    i32 128, label %5
    i32 130, label %5
    i32 135, label %6
    i32 139, label %12
    i32 136, label %18
    i32 132, label %18
    i32 138, label %18
  ]

5:                                                ; preds = %1, %1, %1, %1, %1, %1, %1
  br label %24

6:                                                ; preds = %1
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* @BgWorkerStart_RecoveryFinished, align 4
  %9 = icmp eq i32 %7, %8
  br i1 %9, label %10, label %11

10:                                               ; preds = %6
  store i32 1, i32* %2, align 4
  br label %25

11:                                               ; preds = %6
  br label %12

12:                                               ; preds = %1, %11
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* @BgWorkerStart_ConsistentState, align 4
  %15 = icmp eq i32 %13, %14
  br i1 %15, label %16, label %17

16:                                               ; preds = %12
  store i32 1, i32* %2, align 4
  br label %25

17:                                               ; preds = %12
  br label %18

18:                                               ; preds = %1, %1, %1, %17
  %19 = load i32, i32* %3, align 4
  %20 = load i32, i32* @BgWorkerStart_PostmasterStart, align 4
  %21 = icmp eq i32 %19, %20
  br i1 %21, label %22, label %23

22:                                               ; preds = %18
  store i32 1, i32* %2, align 4
  br label %25

23:                                               ; preds = %18
  br label %24

24:                                               ; preds = %23, %1, %5
  store i32 0, i32* %2, align 4
  br label %25

25:                                               ; preds = %24, %22, %16, %10
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
